--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@formkit/auto-animate": "^0.8.2",
     "@nuxt/ui": "^3.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.5.0",
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
