chore: Update vue-tsc and other dependencies for improved compatibility

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,13 +1,11 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": [
-    "env.d.ts",
-    "src/**/*",
-    "src/**/*.vue",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "src/**/*.vue",
     "auto-imports.d.ts",
-    "components.d.ts",
-    "src/**/*.ts"
+    "components.d.ts"
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
