Add unit tests for BookStore and SearchStore, including validations and utility functions
- Implement tests for BookStore actions, computed properties, and initial state.
- Add tests for SearchStore actions, computed properties, and initial state.
- Create utility tests for form validations related to book attributes.
- Introduce a test utility file for setting up test environments and mocking.
- Configure Vitest with appropriate settings and TypeScript support for testing.

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,8 +1,9 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": [
+    "env.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx",
+    "src/**/*",
     "src/**/*.vue",
     "auto-imports.d.ts",
     "components.d.ts"
