--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft.AspNetCore": "Warning"
+      }
+   },
+   "ConnectionStrings": {
+      "DefaultConnection": "server=localhost;port=3306;database=bookstore;user=root;password=YOUR_MYSQL_PASSWORD"
+   },
+   "Jwt": {
+      "Key": "VeryLongAndSecureKeyForJwt12458910-this-should-be-at-least-32-characters-long",
+      "Issuer": "BookstoreApi",
+      "Audience": "BookstoreClient"
+   }
 }
