--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,16 +1,21 @@
 # Use the official .NET 8.0 runtime as base image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
 # Use the official .NET 8.0 SDK for building
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 WORKDIR /src
-COPY ["backend.csproj", "./"]
-RUN dotnet restore "backend.csproj"
+
+# Copy only the project file first to restore dependencies
+COPY ["Backend/backend.csproj", "Backend/"]
+RUN dotnet restore "Backend/backend.csproj" --disable-parallel
+
+
+# Now copy the rest of the code
 COPY . .
-WORKDIR "/src"
+WORKDIR "/src/Backend"
 RUN dotnet build "backend.csproj" -c Release -o /app/build
 
 FROM build AS publish
@@ -23,5 +28,8 @@ COPY --from=publish /app/publish .
 
 # Create uploads directory
 RUN mkdir -p /app/wwwroot/uploads
+
+# Switch to non-root user for better security
+USER $APP_UID
 
 ENTRYPOINT ["dotnet", "backend.dll"]
